done with findbugs and checkstyle